--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <TextView
@@ -43,19 +44,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn1" />
 
-    <ProgressBar
-        android:id="@+id/Prog"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="162dp"
-        android:layout_height="469dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="115dp"
-        android:layout_marginEnd="233dp"
-        android:maxWidth="75dp"
-        android:maxHeight="100dp"
-        android:progress="50"
-        android:progressTint="#3F51B5"
-        android:rotation="-90"
+    <ImageView
+        android:id="@+id/tank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="217dp"
+        android:layout_marginEnd="78dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
